<resources>
    <string name="app_name">FeedItBack</string>
    <string name="hintEmail">Email</string>
    <string name="hintPassword">Password</string>
    <string name="hintPassword1">New Password</string>
    <string name="hintPassword2">Confirm Password</string>
    <string name="hintName">Name</string>
    <string name="anonymousHint">Give feedback as Anonymous</string>
    <string name="signupHint">No account yet?<b>Create one</b></string>
    <string name="loginHint">Already a member?<b>Login</b></string>
    <string name="signupButtonHint">CREATE ACCOUNT</string>
    <string name="loginButtonHint">LOGIN</string>
    <string name="hintDesignation">Designation</string>
    <string name="title_activity_feedback">Feedback</string>
    <string name="title_feedback">Feedback</string>
    <string name="title_profile">Profile</string>
    <string name="title_view">View</string>
    <string name="sandipan_details"><b>Sandipan Chakraborty</b> \n sandipanchakraborty144@gmail.com \n +91-9804113215</string>
    <string name="priyanshu_details"><b>Priyanshu Saxena</b> \n priyanshu.saxena0396@gmail.com \n +91-9140486400</string>
    <string name="baishali_details"><b>Baishali Chakraborty</b> \n baishalichakra96@gmail.com \n +91-8837349480</string>
    <string-array name="array_technology">
    <item>Feedback 1</item>
    <item>Feedback 2</item>
    <item>Feedback 3</item>
    </string-array>
</resources>
