<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DeveloperDetails"
    android:background="@color/ash">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="The Team- SanPriShali"
        android:id="@+id/team"
        android:layout_centerHorizontal="true"
        android:textSize="20dp"
        style="@style/TextAppearance.AppCompat.Headline"
        android:textStyle="bold" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="vertical"
        android:id="@+id/first">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="140dp"
            android:src="@drawable/san" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_gap"
            android:textSize="19dp"
            style="@style/TextAppearance.AppCompat.Large"
            android:layout_gravity="center"
            android:text="@string/sandipan_details"
            android:textStyle="italic" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:id="@+id/second"
        android:layout_below="@+id/first">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="140dp"
            android:src="@drawable/priy" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_gap"
            android:textSize="19dp"
            style="@style/TextAppearance.AppCompat.Large"
            android:layout_gravity="center"
            android:text="@string/priyanshu_details"
            android:textStyle="italic" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:id="@+id/third"
        android:layout_below="@+id/second">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="140dp"
            android:src="@drawable/bais" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_gap"
            android:textSize="19dp"
            style="@style/TextAppearance.AppCompat.Large"
            android:layout_gravity="center"
            android:text="@string/baishali_details"
            android:textStyle="italic" />
    </LinearLayout>
</RelativeLayout>